--- a/_posts/2018-11-20-haunted.md
+++ b/_posts/2018-11-20-haunted.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-is this a post
+title: Haunted Locations
 ---
 
 Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
